# Quester.AI

./: .gitattributes  .gitignore  CODEBASE_CONTEXT.md  DECISION_LOG.md  FEATURE_STRATEGY.md  IMPLEMENTATION_TASK_TEMPLATE.md  LOCAL_MODEL_SETUP.md  Masterplan.md  Masterplan.txt  ProgressSummary.md  README.md  UI-TODO.md  acceptance_thresholds.py  agent_schema.py  bounded_cache.py  capability_guardrails.py  capability_runtime.py  cloud_offload.py  coding_mode.py  compression_service.py  compressor.py  config.py  critic.py  critique_service.py  dashboard.py  data_structures.py  deadcode_log.md  environment.yml  local_audio.py  local_code_specialist.py  local_translation.py  local_vision.py  macro_engine.py  model_backends.py  model_manager.py  orchestrator.py  phase11_content.py  phase6_benchmark.py  planner.py  planner_service.py  (+19 more)
.github/workflows/: python-app.yml  python-package-conda.yml
examples/phase11/: demo_corpus.json  sample_tasks.json  starter_macros.json  starter_runtime_pack.json  verified_deep_trace_export.jsonl
tests/: __init__.py  test_coding_mode.py  test_compatibility_contract.py  test_phase11_content.py  test_phase12_acceptance_thresholds.py  test_phase12_agent_units.py  test_phase12_end_to_end.py  test_phase12_gui_acceptance.py  test_phase12_packaged_smoke.py  test_phase12_preflight.py  test_phase12_resource_optimizer.py  test_phase12_translation_exports.py  test_phase13_async_safety.py  test_phase13_guardrails.py  test_phase16_project_gates.py  test_phase16_subsystem_gates.py  test_phase16_validation_gates.py  test_phase17_long_horizon.py  test_phase18_model_registry.py  test_phase19_specialist_roles.py  test_phase20_capability_foundation.py  test_phase20_local_first_guardrail.py  test_phase21_browser_app_control.py  test_phase21_desktop_input_safety.py  test_phase21_live_capability_execution.py  test_phase21_local_task_sessions.py  test_phase22_continuous_capture.py  test_phase22_observation_execution.py  test_phase22_on_step_modes.py  test_phase23_cloud_guardrails.py  test_phase24_packaged_startup.py  test_phase2_contracts.py  test_phase3_runtime.py  test_phase4_budget_policy.py  test_phase5_persistence.py  test_phase5_retrieval.py  test_phase6_density.py  test_phase6_macro_engine.py  test_phase7_boundaries.py  test_pyside_shell_module.py  (+1 more)
tests/fixtures/compatibility/: compressed_trace_compatibility.json  task_result_compatibility.json
